hnn_core/gui/gui_styles.css
/* ... */
/* adjust sim tab button properties to avoid overlap or overflow */
.simulation-tab-contents,
.simulation-tab-contents .widget-hbox,
.simulation-tab-contents .widget-vbox {
    overflow: hidden !important;
    box-sizing: border-box !important;
}

/*
    There is an additional Output() box around "Core" and "MPI cmd"
    since the "MPI cmd" is dynamically inserted when the MPI backend
    is selected. We need to remove the margin around that extra box
    so that the input fields line up properly.
*/
.backend-config-out {
    margin: 0px !important;
}

/* ---------------------------------------- */
/* -- adjust visualization-tab-contents --- */
/* ---------------------------------------- */
/*
    the blocks below remove the border in visualization-tab-contents
    when there is no figure present
*/

/*
    remove the "top" edge of the border by setting border to "none"
    if the "lm-TabBar-tab" child class is not present

        Note: This element needs to be targeted with "::after", as that
        element is used to form the border that spans from the end of
        the tab to the end of the container that holds the figure.
*/
.visualization-tab-contents
.lm-TabBar-content:not(:has(.lm-TabBar-tab))::after {
    content: none !important;
    border: none !important;
    display: none !important;
}

/*
    remove the "U" edges of the border by setting border to none if
    the "widget-container" child is not present
*/
.visualization-tab-contents
.widget-tab-contents:not(:has(.widget-container)) {
    border: none !important;
    box-shadow: none !important;
    outline: none !important;
}

/*  adjust make figure button  */
.make-fig-btn {
    flex: 1 1 auto !important;
    width: auto !important;
    margin: 2px 2px 2px 10px !important;
}

/* ---------------------------------------- */
/* ----- add scrollbar gutter to tabs ----- */
/* ---------------------------------------- */

/*
    Style the gutter for the *child* containers within the network-tab-contents. This
    adds the gutter *inside* the Connectivity and Cell Parameter widgets.
*/
.network-tab-contents > .widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}

/*
    Style the gutter for the *parent* container of drive-tab-contents. This adds the
    gutter *outside* of the widgets.

        Note: To do this, we check if the 3rd tab (External Drives) is
        active, and we selectively style the contents container for that
        tab only, since we do not want the gutter present on all tabs.
*/
.param-window-tabs-widget >
.widget-tab-bar:has(.lm-TabBar-tab:nth-child(3).lm-mod-current) +
.widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}

/*
    similarly style the gutter for the *parent* container of
    visualization-tab-contents, which adds the gutter *outside*
    of the widgets
*/
.param-window-tabs-widget >
.widget-tab-bar:has(.lm-TabBar-tab:nth-child(4).lm-mod-current) +
.widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}

/* ---------------------------------------- */
/* --------- style the log window --------- */
/* ---------------------------------------- */

.log-toggle-icon {
    overflow: visible !important;
    position: absolute !important;
    top: 0px !important;
    left: 0px !important;
    z-index: 10;
    color: var(--textbook-light-purple);
    background: transparent !important;
    border: none !important;
    font-size: 0 !important;
}

/*  remove focus effects on the icon  */
.log-toggle-icon:focus {
    outline: none !important;
    border: none !important;
    box-shadow: none !important;
    --jp-widgets-input-focus-border-color: transparent !important;
    --jp-widgets-input-focus-shadow: none !important;
}

/*  remove hover effects on the icon  */
.log-toggle-icon:hover {
    color: var(--theme-color);
    box-shadow: none !important;
}

/*
    ensure the log output handles scrolling, and that the
    output's contents don't overlap the toggle button
*/
.log-window > .widget-output {
    overflow-y: auto !important;
    padding-left: 30px !important;
    padding-right: 10px !important;
}

/* ================================================== */
/* adjust style of visualization-window & children */
/* ================================================== */

/*  adjust the tab border color to match the container  */
.visualization-window .lm-TabBar-tab {
    border-color: lightgrey !important;
}

/*  remove the automatically-added margins  */
.visualization-window > .widget-output,
.visualization-window .fig-tabs {
    margin: 0px 0px 0px 0px !important;
}

/*
    make the visualization-window border transparent if
    fig-tabs is *not* empty
*/
.visualization-window:has(.fig-tabs:not(:empty)) {
    border-color: transparent !important;
}

/*
    align TabBar to the *top* rather than the bottom, and shift
    the top margin to reduce excess space
*/
.visualization-window .lm-TabBar {
    align-items: flex-start !important;
    margin-top: -1px !important;
}

.visualization-window .lm-TabBar-content {
    margin-top: 0 !important;
}

/*
    set "display: flex" on visualization-window to enable its
    children to grow to fill available space
*/
.visualization-window {
    display: flex !important;
    flex-direction: column !important;
}
/* ... */

